[package]
name = "slack-user-cache"
version = "999.9.9-SNAPSHOT"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack_api = "0.23"
reqwest = "0.10"
log = "0.4"
clap = { git = "https://github.com/clap-rs/clap/", tag = "v3.0.0-beta.2" }
loggerv = "0.7"
dotenv = "0.15"
error-enum = { git = "https://github.com/ethankhall/error-enum-generator", rev = "b5f3276a8d967fc58149d0698a342539ebcec55e" }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3" 
futures = "0.3" 
mobc-redis = "0.5"
mobc = { version = "0.5", features = ["async-std"] }
derivative = "2.1"
warp = "0.2"
json = "0.12"
governor = "0.3"
nonzero_ext = "0.2"