[package]
name = "slack-user-cache"
version = "999.9.9-SNAPSHOT"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack_api = { version = "0.23", features = ["async"], default-features = false }
reqwest = { version = "0.11", features = ["rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
clap = { git = "https://github.com/clap-rs/clap/", tag = "v3.0.0-beta.2" }
dotenv = "0.15"
tokio = { version = "1.5", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3" 
futures = "0.3" 
mobc-redis = "0.7"
mobc = { version = "0.7", features = ["async-std"] }
derivative = "2.2"
warp = "0.3"
json = "0.12"
governor = "0.3"
nonzero_ext = "0.2"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"